# algoritms_and_data

./: README.md
AVLTree/: CMakeLists.txt
AVLTree/src/: AddValue.c  AddValue.h  Alloc.c  Alloc.h  Balanced.c  Balanced.h  Height.c  Height.h  Input.c  Input.h  Tree.h  main.c
BFSforMatrix/: CMakeLists.txt
BFSforMatrix/src/: BFS.c  BFS.h  main.c
DFSforMatrix/: CMakeLists.txt
LRUcache/: CMakeLists.txt
LRUcache/src/: main.cpp
algorithmBoireMoore/: CMakeLists.txt
algorithmBoireMoore/src/: algoritmBoyerMyr.c  algoritmBoyerMyr.h  main.c
algorithmDijkstra/: CMakeLists.txt  readme.md
algorithmDijkstra/src/: Dijkstra.c  Dijkstra.h  main.c
algorithmHaffman/: CMakeLists.txt
algorithmHaffman/src/: Decode.c  Decode.h  Encode.c  Encode.h  Free.c  Free.h  Read.c  Read.h  StructsAndTypes.c  StructsAndTypes.h  Write.c  Write.h  main.c
algorithmKraskal/: CMakeLists.txt  readme.md
algorithmKraskal/src/: Kraskal.c  Kraskal.h  main.c
algorithmNarayana/: CMakeLists.txt
algorithmNarayana/src/: main.c  outputResult.c  outputResult.h  swapperNair.c  swapperNair.h
algorithmPrima/: CMakeLists.txt  readme.md
algorithmPrima/src/: Prim.c  Prim.h  main.c
algorithmRabinKarp/: CMakeLists.txt
algorithmRabinKarp/src/: algoritmRobinKarp.c  algoritmRobinKarp.h  main.c
bubbleSort/src/: bubbleSort.c  bubbleSort.h  main.c
convertationSystemOfCalculation/: CMakeLists.txt
convertationSystemOfCalculation/src/: main.c  translateInSys.c  translateInSys.h
filterBlum/: CMakeLists.txt  readme.md
filterBlum/src/: main.c
heapSort/: CMakeLists.txt  readme.md
heapSort/src/: heapSort.c  heapSort.h  main.c
idealHash/: CMakeLists.txt  todo.md
idealHash/src/: main.c
quickSort/: CMakeLists.txt  readme.md
quickSort/src/: main.c  quickSort.c  quickSort.h
redBlackTree/: CMakeLists.txt
redBlackTree/src/: Alloc.c  Alloc.h  Balanced.c  Balanced.h  CheckColor.c  CheckColor.h  Height.c  Height.h  Input.c  Tree.c  Tree.h  main.c
reversePolishNotation/: CMakeLists.txt
reversePolishNotation/src/: CalcWithRPN.c  CalcWithRPN.h  Eval.c  Eval.h  Input.c  Input.h  Priority.c  Priority.h  Stack.c  Stack.h  main.c
template/: CMakeLists.txt
template/src/: main.c
topSort/: CMakeLists.txt
topSort/src/: Graph.c  Graph.h  Input.c  Input.h  Output.c  Output.h  main.c
